Implementação do Command Pattern
- Implementação do Command Pattern
- Mudanças no Strategy Pattern
- Correção do "clear" no linux